# MultiDroplet-Tracking

./: .gitignore  CMakeLists.txt  README.md  main.cpp  multidroplet_tracking.cpp  multidroplet_tracking.h
camera/: CMakeLists.txt  camera.cpp  camera.h
detection/: CMakeLists.txt  detect.cpp  detect.h  selectROIs.cpp  selectROIs.h
preprocessing/: CMakeLists.txt  perspective_transform.cpp  perspective_transform.h  preprocessing.cpp  preprocessing.h  segment.cpp  segment.h
tracking/: CMakeLists.txt  tracking.cpp  tracking.h
tracking/CF Tracker/: CMakeLists.txt  ColorName_Feature.cpp  ColorName_Feature.hpp  KCF_Tracker.cpp  KCF_Tracker.hpp  complexmat.hpp  utils.hpp
